<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.pedro.library.view.OpenGlView
        android:id="@+id/openGlView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:keepScreenOn="true"
        app:aspectRatioMode="adjust"
        app:layout_constraintBottom_toTopOf="@id/bottomPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="Status" />

            <TextView
                android:id="@+id/tvDurations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="Durations" />

        </LinearLayout>

        <Button
            android:id="@+id/btnStartStream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:text="@string/start_stream"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnStopStream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/stop_stream" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnToggleMicOn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/enable_microphone"
                android:src="@drawable/ic_mic_on" />

            <ImageView
                android:id="@+id/btnToggleMicOff"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/disable_microphone"
                android:src="@drawable/ic_mic_off" />

            <ImageView
                android:id="@+id/btnSwitchCamera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/switch_camera"
                android:src="@drawable/ic_flip_camera" />

            <ImageView
                android:id="@+id/btnViewers"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/show_viewers"
                android:src="@drawable/ic_users_info" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
